# balabala

./: .gitignore  Cargo.toml  README.md  file  index.html  result.json  run  watch
parse/: README.md  package.json  server.js
src/: aa.rs  blError.rs  gpt.rs  lib.rs  taskController.rs  tests.rs  utils.rs
wasm/: README.md  build_watch.sh  wasm_pack_script.sh
web_ui/: package-lock.json  package.json
web_ui/src/app/: page.js  result.json
