[package]
name = "balabala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
js-sys = "0.3"
reqwest = "0.11.18"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1", features = ["sync","macros","io-util","rt","time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]


